--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -18,32 +18,34 @@
     <!--NAVBAR + SIDENAV-->
     <nav>
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
+            <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
             <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
-              <li><a href="./imagearuco.html">Image Detection</a></li>
-              <li><a href="./streamaruco.html">Streaming Detection</a></li>
+              <li><a href="./imagearuco">Image Detection</a></li>
+              <li><a href="./streamaruco">Streaming Detection</a></li>
               <li><a href="#">Project</a></li>
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>     
     </nav>
     <ul id="slide-out" style="font-family: 'Montserrat', sans-serif; font-weight: 600;" class="sidenav">
-        <li><a href="./imagearuco.html">Image Detection</a></li>
-        <li><a href="./streamaruco.html">Streaming Detection</a></li>
+        <li><a href="./imagearuco">First Link</a></li>
+        <li><a href="./streamaruco">Second Link</a></li>
         <li><a href="#!">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
     <!--FORM-->
     <div class="container">
-        <form method="post" action="/upload">
+        <form method="post" enctype="multipart/form-data" action="/api/upload" onsubmit="return false;">
             <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
             <div style="margin-top: 10px;">
-              <input type="text" id="choose-file" name="choose-file" accept="image/*" />
+              <input type="file" id="file" name="file" accept="image/*" />
+              <label for="file" class="custom-file-upload">Scegli immagine</label>
+              <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansione</button>
             </div>
         </form>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"></div>
-            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg"></div>
+            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
         </div>
     </div>
 
@@ -75,7 +77,9 @@
     </footer>
     <!--FINE FOOTER-->
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="./js/materialize.js"></script>
+    <script type="module" src="./js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script></script>
   </body>
 </html>
