--- a/public/index.html
+++ b/public/index.html
@@ -18,37 +18,62 @@
     <!--NAVBAR + SIDENAV-->
     <nav>
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
+            <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
             <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
-              <li><a href="./imagearuco.html">Image Detection</a></li>
-              <li><a href="./streamaruco.html">Streaming Detection</a></li>
+              <li><a href="./imagearuco">Image Detection</a></li>
+              <li><a href="./streamaruco">Streaming Detection</a></li>
               <li><a href="#">Project</a></li>
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>     
     </nav>
     <ul id="slide-out" style="font-family: 'Montserrat', sans-serif; font-weight: 600;" class="sidenav">
-        <li><a href="./imagearuco.html">First Link</a></li>
-        <li><a href="./streamaruco.html">Second Link</a></li>
+        <li><a href="./imagearuco">Image Detection</a></li>
+        <li><a href="./streamaruco">Stream Detection</a></li>
         <li><a href="#!">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
-    <!--FORM-->
-    <div class="container">
-        <form method="post" enctype="multipart/form-data" action="/uploadimage" onsubmit="return false;">
-            <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
-            <div style="margin-top: 10px;">
-              <input type="file" id="file" name="file" accept="image/*" />
-              <label for="file" class="custom-file-upload">Scegli immagine</label>
-              <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansione</button>
+    <!--Header Custom ArucoAI Projet-->
+    <!--CENTRO-->
+    <div class="header-custom">
+      <div style="text-align: center;">
+        <h1>Aruco Detection</h1>
+      </div>
+      <div class="container row">
+        <!--CARD ARUCO-->
+        <div class="col l6 m6 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px">
             </div>
-        </form>
-        <div class="row" style="margin-top: 10px;">
-            <div id="img-preview" class="col l6 m6 s12"></div>
-            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Image<i class="material-icons right">more_vert</i></span>
+              <p><a href="imagearuco">Clicca qui</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Image<i class="material-icons right">close</i></span>
+              <p>Servizio che permette di inserire un'immagine contenente Aruco a piacere e restituisce la stessa immagine con un rettangolo nelle stessa posizione dell'Aruco</p>
+            </div>
+          </div>
         </div>
+        <div class="col l6 m6 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="./img/streamvid.svg" style="padding: 20px 60px 0px 60px">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Stream<i class="material-icons right">more_vert</i></span>
+              <p><a href="streamaruco">Clicca qui</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Stream Image<i class="material-icons right">close</i></span>
+              <p>Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
+    <!--FINE CARD ARUCO-->
     <!--FOOTER-->
     <footer class="page-footer">
       <div class="container">
@@ -77,9 +102,7 @@
     </footer>
     <!--FINE FOOTER-->
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="./js/materialize.js"></script>
-    <script type="module" src="./js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script></script>
+    <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
