modifica dei collegamenti delle cards

--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -33,8 +33,9 @@
         <li><a href="#!">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
-    <!--FORM-->
+    <!--Scegli file-->
     <div class="container">
+        <h6 style="margin-top: 30px;">Servizio che permette di inserire un'immagine contenente Aruco a piacere e restituisce la stessa immagine con un rettangolo nelle stessa posizione dell'Aruco</h6>
         <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
         <div style="margin-top: 10px;">
           <input type="file" id="file" name="file" accept="image/*" />
