--- a/public/index.html
+++ b/public/index.html
@@ -44,30 +44,22 @@
         <div class="col l6 m6 s12">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px">
+              <a href="streamaruco"><img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px"></a>
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Image<i class="material-icons right">more_vert</i></span>
               <p><a href="imagearuco">Clicca qui</a></p>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Image<i class="material-icons right">close</i></span>
-              <p>Servizio che permette di inserire un'immagine contenente Aruco a piacere e restituisce la stessa immagine con un rettangolo nelle stessa posizione dell'Aruco</p>
             </div>
           </div>
         </div>
         <div class="col l6 m6 s12">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="./img/streamvid.svg" style="padding: 20px 60px 0px 60px">
+              <a href="streamaruco"><img class="activator" src="./img/streamvid.svg" style="padding: 20px 60px 0px 60px"></a>
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Stream<i class="material-icons right">more_vert</i></span>
               <p><a href="streamaruco">Clicca qui</a></p>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Stream Image<i class="material-icons right">close</i></span>
-              <p>Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</p>
             </div>
           </div>
         </div>
