--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -33,14 +33,13 @@
         <li><a href="#!">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
-    <!--FORM-->
+    <!--Scegli file-->
     <div class="container">
-        <form method="post" action="/api/upload">
-            <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
-            <div style="margin-top: 10px;">
-              <input type="text" id="choose-file" name="choose-file" accept="image/*" />
-            </div>
-        </form>
+          <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</h6>
+          <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
+          <div style="margin-top: 10px;">
+            <input type="text" id="choose-file" name="choose-file" accept="image/*" />
+          </div>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg"></div>
