--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <div class="col l6 m6 s12">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <a href="streamaruco"><img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px"></a>
+              <a href="imagearuco"><img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px"></a>
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Image<i class="material-icons right">more_vert</i></span>
