--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -28,8 +28,8 @@
         </div>     
     </nav>
     <ul id="slide-out" style="font-family: 'Montserrat', sans-serif; font-weight: 600;" class="sidenav">
-        <li><a href="./imagearuco">First Link</a></li>
-        <li><a href="./streamaruco">Second Link</a></li>
+        <li><a href="./imagearuco">Image Aruco</a></li>
+        <li><a href="./streamaruco">Streaming Aruco</a></li>
         <li><a href="#!">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
