Aggiunta di scelta immagine da sovrapporre

--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -36,7 +36,7 @@
     <!--Scegli file-->
     <div class="container">
           <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</h6>
-          <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
+          <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Incolla l'URL della stream:</h4>
           <div style="margin-top: 10px;">
             <input type="text" id="choose-file" name="choose-file" accept="image/*" />
           </div>
