--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -36,18 +36,21 @@
     <!--Scegli file-->
     <div class="container">
         <h6 style="margin-top: 30px;">Servizio che permette di inserire un'immagine contenente Aruco a piacere e restituisce la stessa immagine con una cornice e un'immagine orientata nella stessa posizione dell'Aruco</h6>
-        <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui il tuo file:</h4>
-        <div style="margin-top: 10px;">
-          <input type="file" id="file" name="file" accept="image/*" />
-          <label for="file" class="custom-file-upload">Scegli immagine</label>
-          <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansione</button>
+        <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui i tuoi file:</h4>
+        <div class="row">
+          <div style="margin-top: 10px;" class="col l6 m6 s12">
+            <input type="file" id="file" name="file" accept="image/*" />
+            <label for="file" class="custom-file-upload">Scegli immagine su cui sovrapporre</label>
+            <input type="file" id="file1" name="file" accept="image/*" />
+            <label for="file1" class="custom-file-upload">Scegli immagine da sovrapporre</label>
+            <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansione</button>
+          </div>
         </div>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
         </div>
     </div>
-
     <!--FOOTER-->
     <footer class="page-footer">
       <div class="container">
