--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -41,15 +41,20 @@
           <div style="margin-top: 10px;" class="col l6 m6 s12">
             <input type="file" id="file" name="file" accept="image/*" />
             <label for="file" class="custom-file-upload">Scegli immagine su cui sovrapporre</label>
-            <input type="file" id="file1" name="file" accept="image/*" />
+            <input type="file" id="file1" name="file1" accept="image/*" />
             <label for="file1" class="custom-file-upload">Scegli immagine da sovrapporre</label>
-            <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansione</button>
+            <button class="waves-effect waves-light btn teal darken-4" id="uploadbtn">Scansiona</button>
           </div>
         </div>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
         </div>
+        <div style="visibility: hidden;" id="corners">
+          <h4>Vertici: </h4>
+          <p></p>
+        </div>
+
     </div>
     <!--FOOTER-->
     <footer class="page-footer">
