Started working on the streaming side

--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -38,10 +38,11 @@
           <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</h6>
           <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Incolla l'URL della stream:</h4>
           <div style="margin-top: 10px;">
-            <input type="text" id="choose-file" name="choose-file" accept="image/*" />
+            <input type="url" id="streaming" name="streaming" />
           </div>
+          <button class="waves-effect waves-light btn teal darken-4" id="streambtn">Scansiona</button>
         <div class="row" style="margin-top: 10px;">
-            <div id="img-preview" class="col l6 m6 s12"></div>
+            <div id="img-preview" class="col l6 m6 s12"><img src="" style="width: 100%" id="input"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg"></div>
         </div>
     </div>
@@ -75,6 +76,6 @@
     <!--FINE FOOTER-->
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/streamscript.js"></script>
   </body>
 </html>
