--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -43,7 +43,7 @@
           <button class="waves-effect waves-light btn teal darken-4" id="streambtn">Scansiona</button>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"><img src="" style="width: 100%" id="input"></div>
-            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg"></div>
+            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
         </div>
     </div>
 
