Rivisitamento Front-End

--- a/public/error.html
+++ b/public/error.html
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
-<html lang="it">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
+<body>
+  <section>
+    <div class="container">
+      <div><img class="image" src="https://omjsblog.files.wordpress.com/2023/07/errorimg.png" alt=""></div>
+    </div>
+      <div class="text">
+        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 600;"> Pagine non trovata </h1>
+        <p>Non siamo stati in grado di trovare la pagina da lei desiderata :(</p>
+        <ul class="menu">
+          <div class="nav-wrapper">
+            <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
+            <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
+              <li><a href="./index">Home ArucoIA</a></li>
+              <li><a href="./chisiamo">Chi siamo</a></li>
+              <li><a href="./imagearuco">Image Detection</a></li>
+              <li><a href="./streamaruco">Stream Detection</a></li>      
+            </ul>
+            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>             
+        </ul>
+      </div>   
+    </div>
+  </section>
 
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100svh;
-        font-size: 60px;
-      }
-    </style>
-  </head>
-  <body>
-    Oops, qualcosa è andato storto :(
-  </body>
-</html>
+</body>
