--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -20,6 +20,7 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
             <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
+              <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
               <li><a href="#">Project</a></li>
@@ -28,6 +29,7 @@
         </div>     
     </nav>
     <ul id="slide-out" style="font-family: 'Montserrat', sans-serif; font-weight: 600;" class="sidenav">
+        <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Streaming Detection</a></li>
         <li><a href="#!">Project</a></li>
@@ -58,10 +60,10 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://docs.opencv.org/4.x/d5/dae/tutorial_aruco_detection.html" target="_blank">Documentazione Aruco</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://chev.me/arucogen/" target="_blank">Generatore Aruco</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Documentazione Computer Vision</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Link 4</a></li>
             </ul>
           </div>
         </div>
