aggiornamento di tutte le pagine html

--- a/public/error.html
+++ b/public/error.html
@@ -1,24 +1,24 @@
 <body>
-  <section>
+  <section style="display: flex; justify-content: center; align-items: center;">
     <div class="container">
-      <div><img class="image" src="https://omjsblog.files.wordpress.com/2023/07/errorimg.png" alt=""></div>
+      <div style="max-width: 850px;">
+        <img class="image" src="https://omjsblog.files.wordpress.com/2023/07/errorimg.png" alt="" style="width: 100%; height: auto;">
+      </div>
     </div>
-      <div class="text">
-        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 600;"> Pagine non trovata </h1>
-        <p>Non siamo stati in grado di trovare la pagina da lei desiderata :(</p>
-        <ul class="menu">
-          <div class="nav-wrapper">
-            <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
-            <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
-              <li><a href="./index">Home ArucoIA</a></li>
-              <li><a href="./chisiamo">Chi siamo</a></li>
-              <li><a href="./imagearuco">Image Detection</a></li>
-              <li><a href="./streamaruco">Stream Detection</a></li>      
-            </ul>
-            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <div class="text" style="margin-left: 40px;"> <!-- Aggiunto un margine sinistro per separare l'immagine dal testo -->
+      <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 1000;"> Pagine non trovata </h1>
+      <p style="font-family: 'Montserrat', sans-serif; font-weight: 500;">Non siamo stati in grado di trovare la pagina da lei desiderata :( </p>
+      <ul class="menu">
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 1000;">ArucoAI</a>
+          <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
+            <li><a href="./index">Home ArucoIA</a></li>
+            <li><a href="./chisiamo">Chi siamo</a></li>
+            <li><a href="./imagearuco">Image Detection</a></li>
+            <li><a href="./streamaruco">Stream Detection</a></li>      
+          </ul>
         </div>             
-        </ul>
-      </div>   
-    </div>
+      </ul>
+    </div>   
   </section>
 </body>
