--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it" translate="no">
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,7 +12,8 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ArucoAI - Hompage</title>
+    <title>ArucoAI - Image Detector</title>
+    <link rel="icon" type="image/x-icon" href="https://www.researchgate.net/publication/323864883/figure/fig3/AS:720960680386563@1548901829417/A-typical-ArUco-library-marker.png">
   </head>
   <body>
     <!--NAVBAR + SIDENAV-->
@@ -69,10 +70,10 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
+              <li><a class="grey-text text-lighten-3" href="https://www.ibm.com/it-it/topics/computer-vision" target="_blank">Documentazione Computer Vision</a></li>
               <li><a class="grey-text text-lighten-3" href="https://docs.opencv.org/4.x/d5/dae/tutorial_aruco_detection.html" target="_blank">Documentazione Aruco</a></li>
-                <li><a class="grey-text text-lighten-3" href="https://chev.me/arucogen/" target="_blank">Generatore Aruco</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Documentazione Computer Vision</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Link 4</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://chev.me/arucogen/" target="_blank">Generatore Aruco</a></li>              
+              <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Link 4</a></li>
             </ul>
           </div>
         </div>
