--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -17,14 +17,14 @@
   </head>
   <body>
     <!--NAVBAR + SIDENAV-->
-    <nav>
+    <nav class="navbar-custom">
         <div class="nav-wrapper">
             <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
             <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
               <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
-              <li><a href="#">Project</a></li>
+              <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>     
@@ -33,11 +33,14 @@
         <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Streaming Detection</a></li>
-        <li><a href="#!">Project</a></li>
+        <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
     <!--Scegli file-->
     <div class="container">
+      <br>
+      <br>
+      <br>
           <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</h6>
           <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Incolla l'URL della stream:</h4>
           <div style="margin-top: 10px;">
