--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -41,12 +41,12 @@
       <br>
       <br>
       <br>
-          <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time</h6>
+          <h6 style="margin-top: 30px;">Servizio che permette di inserire uno stream contenente Aruco e restituisce la stesso stream con un rettangolo nelle stessa posizione dell'Aruco in real time.</h6>
           <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Incolla l'URL della stream:</h4>
-          <div style="margin-top: 10px;">
-            <input type="url" id="streaming" name="streaming" />
+          <div style="margin-top: 10px;" class="row">
+            <input type="url" id="streaming" name="streaming" class="col s12 m12 l10" />
+            <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="streambtn">Scansiona</button>            
           </div>
-          <button class="waves-effect waves-light btn teal darken-4" id="streambtn">Scansiona</button>
         <div class="row" style="margin-top: 10px;">
             <div id="img-preview" class="col l6 m6 s12"><img src="" style="width: 100%" id="input"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
