Aggiustato leggermente i pulsanti sulla pagina 'imagearuco'

--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -44,11 +44,11 @@
         <h6 style="margin-top: 30px;">Servizio che permette di inserire un'immagine con un Aruco a piacere e restituisce l'immagine con una cornice e un'immagine orientata come l'Aruco.</h6>
         <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Carica qui i tuoi file:</h4>
           <div style="margin-top: 10px;" class="row">
-            <div class="col l2 m6 s12" style="">
+            <div class="col l2 m6 s12">
               <input type="file" id="file" name="file" accept="image/*" />
-              <label for="file" class="custom-file-upload" style="display:block; margin-top:10pxz">Scegli immagine su cui sovrapporre</label>
+              <label for="file" class="custom-file-upload" style="display:block; margin-top:10px">Scegli immagine su cui sovrapporre</label>
             </div>
-            <div style="" class="col l2 m6 s12">
+            <div  class="col l2 m6 s12">
               <input type="file" id="file1" name="file1" accept="image/*" />
               <label for="file1" class="custom-file-upload" style="display:block; margin-top:10px">Scegli immagine da sovrapporre</label>
             </div>
