--- a/public/webcamaruco.html
+++ b/public/webcamaruco.html
@@ -8,7 +8,8 @@
 <body>
     <video src=""></video>
     <canvas></canvas>
+    
 </body>
 <script src="js/webcamscript.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </html>
