--- a/public/webcamaruco.html
+++ b/public/webcamaruco.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <video src=""></video>
-    <canvas></canvas>
+    <canvas class="real"></canvas>
+    <canvas class="fake" style="visibility: hidden;"></canvas>
     
 </body>
 <script src="js/webcamscript.js"></script>
