Aggiunto webcam aruco nel frontend

--- a/public/chisiamo.html
+++ b/public/chisiamo.html
@@ -33,6 +33,7 @@
         <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Streaming Detection</a></li>
+        <li><a href="./webcamaruco">Webcam Detection</a></li>
         <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>          
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -42,6 +43,7 @@
     <li><a href="./chisiamo">Chi siamo</a></li>
     <li><a href="./imagearuco">Image Detection</a></li>
     <li><a href="./streamaruco">Stream Detection</a></li>
+    <li><a href="./webcamaruco">Webcam Detection</a></li>
     <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
   </ul>
   <!--FINE NAVBAR + SIDENAV-->
