--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
               <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
+              <li><a href="./webcamaruco">Webcam Detection</a></li>
               <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>           
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -34,6 +35,7 @@
         <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Stream Detection</a></li>
+        <li><a href="./webcamaruco">Webcam Detection</a></li>
         <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
@@ -64,6 +66,17 @@
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Stream<i class="material-icons right">more_vert</i></span>
               <p><a href="streamaruco">Clicca qui</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col l6 m6 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <a href="webcamaruco"><img class="activator" src="./img/streamvid.svg" style="padding: 20px 60px 0px 60px"></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Webcam<i class="material-icons right">more_vert</i></span>
+              <p><a href="webcamaruco">Clicca qui</a></p>
             </div>
           </div>
         </div>
