--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -24,6 +24,7 @@
               <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
+              <li><a href="./webcamaruco">Webcam Detection</a></li>
               <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -33,6 +34,7 @@
         <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Streaming Detection</a></li>
+        <li><a href="./webcamaruco">Webcam Detection</a></li>
         <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
