Quasi finito streaming in streaming

--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -47,11 +47,13 @@
           <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Incolla l'URL della stream:</h4>
           <div style="margin-top: 10px;" class="row">
             <input type="url" id="streaming" name="streaming" class="col s12 m12 l10" />
+            <input type="url" id="replace" name="replace" class="col s12 m12 l10" />
             <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="streambtn">Scansiona</button>            
           </div>
         <div class="row" style="margin-top: 10px;">
-            <div id="img-preview" class="col l6 m6 s12"><img src="" style="width: 100%" id="input"></div>
+            <div id="img-preview" class="col l6 m6 s12"></div>
             <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
+            <img src="" style="width: 100%;" id="fake">
         </div>
     </div>
 
